--- a/README.me
+++ b/README.me
@@ -10,8 +10,10 @@ Será implementado um algoritmo Simulated Anealling para a resolução do proble
 Para executar este código basta executar:
 
 make clean; make;
-./main 1 1
+./main 1 1 1
 
-Onde os argumentos passados com o ./main são a função de redução da temperatura e o arquivo de entrada que será resolvido.
+Onde os argumentos passados com o ./main são a função de redução da temperatura, o arquivo de entrada que será resolvido, as iterações do loop interno e as iterações do loop externo.
 Funções 1 para resfriamento linear e 2 para resfriamento brusco;
 Arquivos de entrada 0, 1 e 2 para "uf20-01.cnf", "uf100-01.cnf", "uf250-01.cnf", respectivamente.
+O loop interno se refere as buscas sem que a temperatura seja atualizada, faça testes começando por 1 (não pode ser zero)
+O loop externo deve ser no máximo 250 mil, assim se aumentar o loop interno em 10, valor padrão é 1, reduzir o externo na mesma proporção
